--- a/twitter/app/views/layouts/application.html.erb
+++ b/twitter/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
 
   <body>
     <%= render partial: 'layouts/barra'%>
+    <%= render partial: 'layouts/flash'%>
     <%= yield %>
   </body>
 </html>
