log in con bootstrap

--- a/twitter/app/views/layouts/_flash.html.erb
+++ b/twitter/app/views/layouts/_flash.html.erb
@@ -1,12 +1,12 @@
 
-<%=if notice %>
+<%if notice %>
     <div class="alert alert-success" role="alert">
-    <%= notice %>
+        <%= notice %>
     </div>
-<%= end%>
+<% end %>
 
-<%=if alert %>
+<%if alert %>
     <div class="alert alert-danger" role="alert">
-    <%= alert %>
+        <%= alert %>
     </div>
-<%= end%>
+<% end %>
