--- a/twitter/app/views/layouts/_barra.html.erb
+++ b/twitter/app/views/layouts/_barra.html.erb
@@ -10,7 +10,7 @@
                 <a class="btn btn-success" href="http://localhost:3000/">Simple Twitter <span class="sr-only"></span></a>  
                 </li> -->
             <li class="nav-item"> 
-                <a class= 'navbar-brand' href="">See tweets</a> </li> 
+                <a class= 'navbar-brand' href="http://localhost:3000/tweets">See tweets</a> </li> 
             <li class="nav-item"> 
                 <a class= 'navbar-brand' href="">See hashtags</a> </li> 
                 
