--- a/twitter/app/views/tweets/index.html.erb
+++ b/twitter/app/views/tweets/index.html.erb
@@ -1,14 +1,16 @@
-<p style="color: green"><%= notice %></p>
 
-<h1>Tweets</h1>
+<div class="container">
+  <p style="color: green"><%= notice %></p>
 
-<div id="tweets">
-  <% @tweets.each do |tweet| %>
-    <%= render tweet %>
-    <p>
-      <%= link_to "Show this tweet", tweet %>
-    </p>
-  <% end %>
+  <h1>Tweets</h1>
+
+  <div id="tweets">
+    <%= render partial: 'tweet', collection: @tweets %>
+      <p>
+        
+      </p>
+   
+  </div>
+
+  <%= link_to "New tweet", new_tweet_path, class: "btn btn.success" %>
 </div>
-
-<%= link_to "New tweet", new_tweet_path %>
