--- a/twitter/app/views/tweets/show.html.erb
+++ b/twitter/app/views/tweets/show.html.erb
@@ -5,5 +5,5 @@
 <div> |
   <%= link_to "Back to tweets", tweets_path %>
 
-  <%= button_to "Destroy this tweet", @tweet, method: :delete %>
+  <%= button_to "Destroy this tweet", @tweet, method: :delete , class: "btn btn-danger"%>
 </div>
