--- a/twitter/app/views/tweets/_form.html.erb
+++ b/twitter/app/views/tweets/_form.html.erb
@@ -17,12 +17,11 @@
       <%= form.label :body, style: "display: block" %>
       <%= form.text_field :body %>
     </div>
-<!--
+
     <div>
-      <%= form.label :user_id, style: "display: block" %>
-      <%= form.text_field :user_id %>
+      <%= form.label :hashtags, style: "display: block" %>
+      <%= form.text_field :hashtags %>
     </div>
--->
     <div>
       <%= form.submit %>
     </div>
